Update install and setup docs.